apps/20-media/mylar/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mylar
  labels:
    app: mylar
spec:
  selector:
    app: mylar
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8090
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
